<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_allow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:onClick="onClickAllow"
        android:text="@string/allow" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_allow"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:onClick="onClickShow"
        android:visibility="invisible"
        android:text="@string/show" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_show"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:onClick="onClickClose"
        android:visibility="invisible"
        android:text="@string/close" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>