<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/input"
        android:inputType="text"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_input"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="20sp"
        android:onClick="onClickCopy"
        android:text="@string/copy" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_copy"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="48dp"
        android:background="#C5C5C5"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:onClick="onClickClose"
        android:text="@string/close" />
</RelativeLayout>